# kmeans-parallel

./: .gitignore  Cargo.toml  README.md  tmp_adaptive.json  tmp_assign.csv  tmp_full.json
.github/workflows/: ci.yml
benches/: bench_kmeans.rs
kmeans-parallel/: README.md
kmeans-parallel/src/: lib.rs
src/: lib.rs  main.rs
