[package]
name = "kmeans_parallel"
version = "0.1.0"
edition = "2021"
authors = ["Vraj Routu"]

[lib]
name = "kmeans_parallel"
path = "src/lib.rs"

[[bin]]
name = "kmeans-parallel-bin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"
csv = "1.2"
parquet = "14.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_kmeans"
harness = false
